kubernetes/https-redirect.middleware.yml

  apiVersion: traefik.containo.us/v1alpha1
  kind: Middleware
  metadata:
    name: https-redirect
  spec:
    redirectScheme:
      scheme: https
      permanent: true
