kubernetes/nuxt.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt
  labels:
    app: nuxt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nuxt
  template:
    metadata:
      labels:
        app: nuxt
    spec:
      containers:
      - name: nuxt
        image: rg.fr-par.scw.cloud/kevinmarrec/nuxt:latest
        ports:
        - containerPort: 3000
