kubernetes/nuxt.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt
  labels:
    app: nuxt
spec:
  selector:
    app: nuxt
  ports:
  - port: 3000
