kubernetes/traefik.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress
  namespace: kube-system
  labels:
    k8s.scw.cloud/ingress: traefik2
spec:
  # type: LoadBalancer
  loadBalancerIP: 195.154.71.32
  ports:
  - name: web
    port: 80
    targetPort: web
  - name: webesecure
    port: 443
    targetPort: websecure
  selector:
    app.kubernetes.io/name: traefik

# 1) Check if IngressClass of 'traefik' DeamonSet is already set
# kubectl get ds/traefik -n kube-system -o json | jq .spec.template.spec.containers[0].args
     
# 2) Add 'traefik-cert-manager' as IngressClass of 'traefik' DeamonSet
# kubectl patch ds/traefik -n kube-system --type=json -p '[{"op": "add", "path": "/spec/template/spec/containers/0/args/-", "value": "--providers.kubernetesIngress.ingressClass=traefik-cert-manager" }]'

# 3) Wait for 'traefik' pods being ready
# kubectl get pods -n kube-system -l app.kubernetes.io/name=traefik
