kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: test.marrec.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nuxt
          servicePort: 3000
