kubernetes/nuxt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt
  labels:
    app: nuxt
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nuxt
  template:
    metadata:
      labels:
        app: nuxt
    spec:
      containers:
      - name: nuxt
        image: rg.fr-par.scw.cloud/kevinmarrec/nuxt:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /robots.txt
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 5"]
---
apiVersion: v1
kind: Service
metadata:
  name: nuxt
  labels:
    app: nuxt
spec:
  selector:
    app: nuxt
  ports:
  - port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nuxt-secure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.marrec.io`)
      kind: Rule
      services:
        - name: nuxt
          port: 3000
  tls:
    secretName: nuxt-cert-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nuxt
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`test.marrec.io`)
      kind: Rule
      services:
        - name: nuxt
          port: 3000
      middlewares:
        - name: https-redirect
